--- a/Dashboard-SPPL/package.json
+++ b/Dashboard-SPPL/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://priyanshu17291.github.io/Dashboard-SPPL",
-  "name": "dashboard-sppl",
+  "name": "my-vite-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
